# call-ai-grapher

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  create_gif.py  denoise.py  detect_alphabet.py  generate_word.py  mkdocs.yml  pyproject.toml  recognize_text.py  setup.py  train.py  tree.html
call_ai_grapher/: README.md  autoencoder.py  callaigrapher.py  gans.py  hw_recognizer.py  ocr.py  scrivener.py  vision.py
call_ai_grapher/object_detection/: data_preparation.py  selective_search.py
config/: denoise_config.py  gans_config.py
data/input/documents/experiment_8/annotations/: coco.json
docs/: experiments.md  explanation.md  index.md  release-notes.md
docs/api-reference/: autoencoder.md  gans.md
docs/how-to-guides/: configure-prompts.md  first-example.md  how-to-guides-intro.md  install-artifacts.md  setup.md
fonts/winter-song-font/: info.txt
notebook/: C1_W2_Assignment.ipynb
